# sodu

./: .gitignore  Cargo.toml  LICENSE  build.rs
proto/: service.proto  types.proto
sodu-core/: Cargo.toml
sodu-core/proto/: service.proto
sodu-core/src/: lib.rs
sodu-core/src/buffer/: buffer.rs  buffer_reader.rs
sodu-core/src/encoder/: decoder.rs  span.rs
sodu-core/src/ingester/: coordinator.rs  ingester_runner.rs  mod.rs  segment_ingester.rs
sodu-core/src/json_encoder/: encoder.rs  mod.rs
sodu-core/src/meta_store/: mod.rs  sodu_meta_store.rs
sodu-core/src/options/: options.rs
sodu-core/src/proto/: service.rs  service_grpc.rs  trace_config.rs
sodu-core/src/query_executor/: executor.rs  mod.rs
sodu-core/src/recovery/: mod.rs  recovery_manager.rs
sodu-core/src/segment/: segment.rs  segment_builder.rs  segment_file.rs  segment_file_iterator.rs  segment_iterator.rs
sodu-core/src/server/: grpc.rs  mod.rs
sodu-core/src/utils/: append.rs  placement.rs  types.rs  utils.rs
sodu-core/src/wal/: mod.rs  wal.rs  wal_iterator.rs
sodu-single-node/: Cargo.toml
sodu-single-node/src/: main.rs
sodu-single-node/src/http_server/: server.rs
sodu-storage/: Cargo.toml
sodu-storage/src/: main.rs
src/: main.rs
src/buffer/: buffer.rs  buffer_reader.rs  consumed_buffer_reader.rs  mod.rs
src/encoder/: decoder.rs  mod.rs  span.rs
src/ingester/: coordinator.rs  ingester.rs  ingester_runner.rs  mod.rs  segment_ingester.rs
src/memtable/: hashmemtable.rs  index_store.rs  iterator.rs  memtable.rs  mod.rs  types.rs
src/options/: mod.rs  options.rs
src/proto/: metrics.rs  mod.rs  service.rs  types.rs
src/query_executor/: executor.rs
src/recovery/: mod.rs  recovery_manager.rs
src/segment/: mod.rs  segment.rs  segment_builder.rs  segment_file.rs  segment_file_iterator.rs  segment_iterator.rs  segment_writer.rs
src/server/: grpc.rs
src/table/: builder.rs  mod.rs  table.rs
src/trace_writer/: mod.rs  trace_encoder.rs  trace_writer.rs
src/utils/: mod.rs  placement.rs  types.rs  utils.rs
src/wal/: mod.rs  wal.rs  wal_buffered_iterator.rs  wal_iterator.rs
(+1 files in other folders)
