[package]
name = "aakal"
version = "0.1.0"
authors = ["Tiger <rbalajis25@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio = "0.6"
protobuf = "~2"
futures = "0.3.5"
log = "0.4"
flexi_logger = "0.15"
rand = "0.7.3"
bytes = "0.5.6"
[build-dependencies]
protobuf-codegen = "2.16"
protoc-grpcio = "2.0"
