[package]
name = "aakal"
version = "0.1.0"
authors = ["Tiger <rbalajis25@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio = "0.6"
protobuf = "~2"
futures = "0.3.5"
log = "0.4"
flexi_logger = "0.15"
rand = "0.7.3"
skiplist = "0.3.0"
unsigned-varint = "0.5.1"
iou = {git= "https://github.com/withoutboats/iou"}
crossbeam-channel = "0.4.4"
libc = "0.2.77"
structopt = "0.3" # Command line utility
crossbeam = "0.7.3"
parking_lot = "0.11.0"

[build-dependencies]
protobuf-codegen = "2.16"
protoc-grpcio = "2.0"

[dev-dependencies]
tempfile = "3.1.0"
num_cpus = "1.0"